p2/confs/app-one.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-one
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: app-one
  template:
    metadata:
      labels:
        app: app-one
    spec:
      containers:
      - name: app-one
        image: kaminskypavel/mario
        imagePullPolicy: "Always"
        ports:
        - containerPort: 8080
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: app-one
spec:
  selector:
    app: app-one
  ports:
  - name: http
    port: 80
    targetPort: 8080
  type: ClusterIP
