p2/confs/app-three.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-three
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-three
  template:
    metadata:
      labels:
        app: app-three
    spec:
      containers:
      - name: app-three
        image: modem7/docker-rickroll
        imagePullPolicy: "Always"
        ports:
        - containerPort: 8080
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: app-three
spec:
  clusterIP: 10.43.25.253
  selector:
    app: app-three
  ports:
  - name: http
    port: 80
    targetPort: 8080
  type: ClusterIP
